# brain-tokyo-workshop

./: .gitignore
WANNRelease/prettyNEAT/: BEFORE_AFTER_COMPARISON.md  CRITICAL_REALIZATION.md  HYPERPARAMETER_ANALYSIS.md  LAYERS_EXPLANATION.md  QUICK_START_FIXED.md  REAL_ISSUE_FOUND.md  RENDERING_FIX.md  SLIMEVOLLEY_README.md  START_HERE_V4.md  V3_COMPLETE_FIX.md  WHATS_DIFFERENT_NOW.md  cmaes.py  deep_diagnostic.py  diagnose_real_issue.py  fix_sdl2_conflict.sh  install_slimevolley.sh  main.py  neat_population_diagnostic.py  neat_test.py  neat_train.py  prettyNEAT_demo.ipynb  pyproject.toml  test_slimevolley.py  test_v4_fix.py  verify_complete_fix.py  verify_v4_actually_running.py
WANNRelease/prettyNEAT/ai_diagnostics/: COMPLETE_FIX_V2.md  FINAL_ANSWER.md  FINAL_RECOMMENDATIONS.md  FIXES_APPLIED.md  INTEGRATION_COMPLETE.md  README_FIXES_V2.md  REFACTORING_SUMMARY.md  SLIMEVOLLEY_DIAGNOSIS.md  SLIMEVOLLEY_SETUP.md  START_HERE_V3.md  V4_THE_REAL_FIX.md  analyze_output_activation.py  debug_network_output_shape.py  debug_slimevolley.py  deep_diagnosis.py  deep_diagnostic.py  diagnose_action_output.py  diagnose_real_issue.py  neat_population_diagnostic.py  saturation_test.py  simple_shape_check.py  test_action_mapping.py  test_random_baseline.py  test_slimevolley.py  test_v3_fix.py  test_v4_fix.py  understand_original_code.md  verify_complete_fix.py  verify_v4_actually_running.py
WANNRelease/prettyNEAT/application/: __init__.py  data_manager.py  evolution_runner.py
WANNRelease/prettyNEAT/core/: __init__.py  setup.py
WANNRelease/prettyNEAT/domain/: __init__.py  (+16 more)
(+621 files in other folders)
