[project]
name = "prettyneat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=0.29.0",
    "pygame>=2.6.0",
    "matplotlib>=3.10.8",
    "mpi4py>=4.1.1",
    "numpy>=2.4.1",
    "slimevolleygym>=0.1.0",
    "opencv-python-headless>=4.8.0",
    "gym==0.25.2",
    "pyglet==1.5.27",
    "black>=26.1.0",
    "seaborn>=0.13.2",
    "networkx>=3.6.1",
    "importlib>=1.0.4",
]
